<?xml version="1.0" encoding="UTF-8"?><!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Audio -->
    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="4"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:title="@string/headphone_gain" />

        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:title="@string/microphone_gain" />
			
    <!-- Dirac -->
    <Preference
        android:key="dirac_settings"
        android:title="@string/dirac_settings_title"
        android:summary="@string/dirac_settings_summary"
        android:icon="@drawable/ic_dirac"
        android:persistent="false" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.asus.zenparts"
                android:targetClass="com.asus.zenparts.dirac.DiracActivity" />
    </Preference>
    </PreferenceCategory>
  
	<!-- Kcal -->	
    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">
        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/kcal_enabled_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.kcal.KCalSettingsActivity"
                android:targetPackage="org.lineageos.settings.kcal" />
        </Preference>
    </PreferenceCategory>

    <!-- Gesture/Zenmotions -->
    <PreferenceCategory
        android:title="@string/category_gesture">	
        <Preference
        android:key="gestures"
        android:title="@string/zenmotions"
        android:icon="@drawable/ic_gestures"
        android:summary="@string/zenmotions_summary"
        android:persistent="false">
            <intent 
			android:action="android.intent.action.MAIN"
            android:targetPackage="com.asus.zenparts"
            android:targetClass="com.asus.zenparts.settings.ScreenOffGestureSettings" />
        </Preference>
		
    <!-- Ambient Gestures-->		
        <PreferenceScreen
                 android:key="ambient_display_gestures"
                 android:fragment="com.asus.zenparts.TouchscreenGesturePreferenceActivity"
                 android:summary="@string/ambient_display_gestures_summary"
                 android:title="@string/ambient_display_gestures_title"
                 android:icon="@drawable/ic_ambient" />
    </PreferenceCategory>

    <!-- Torch -->
    <PreferenceCategory
        android:key="torch"
        android:title="@string/torch_title">
        <com.asus.zenparts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="100"
            android:key="torch_brightness"
            android:max="255"
            app:min="1"
            android:title="@string/torch_brightness_title" />
    </PreferenceCategory>

    <!-- Vibrate -->
    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_title">
        <com.asus.zenparts.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            app:min="1"
            app:units="%"
            android:title="@string/vibration_strength_title" />
    </PreferenceCategory>
</PreferenceScreen>
